--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
+    "config": "^2.0.1",
     "express": "^4.15.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
