--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
     "chalk": "^2.1.0",
     "css-loader": "^0.28.0",
     "enzyme": "^3.3.0",
@@ -63,6 +64,7 @@
     "morgan": "^1.8.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
