--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "supertest": "^3.3.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
