--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ Test:
   - npm test
 
 Build:
-  stage: build
+  stage: Build
   image: node:latest
   script:
     - docker login -u $NEXUS_USER -p $NEXUS_PASSWORD registry.uwm-nm-te-capstone.com
