--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.17.1",
     "config": "^2.0.1",
     "express": "^4.15.2",
@@ -70,7 +71,7 @@
     "supertest": "^3.3.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^3.1.1"
   },
   "jest": {
     "collectCoverage": true,
