--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,7 @@
-image: node:latest
+before_script:
+  - docker info
+
+image: registry.uwm-nm-te-capstone.com:8083/node-docker:latest
 
 stages:
   - Test
@@ -17,10 +20,10 @@ Test:
 Build:
   stage: Build
   script:
-    - docker login -u $NEXUS_USER -p $NEXUS_PASSWORD registry.uwm-nm-te-capstone.com
+    - docker login -u $DOCKER_REPO_USER -p $DOCKER_REPO_PASS registry.uwm-nm-te-capstone.com:8083
     - docker build -t registry.uwm-nm-te-capstone.com:8083/$CI_PROJECT_NAME:$CI_COMMIT_SHA -t registry.uwm-nm-te-capstone.com:8083/CI_PROJECT_NAME:latest .
     - docker push registry.uwm-nm-te-capstone.com:8083/$CI_PROJECT_NAME:$CI_COMMIT_SHA
     - docker push registry.uwm-nm-te-capstone.com:8083/CI_PROJECT_NAME:latest
-#  only:
-#    - master
+  only:
+    - master
   when: on_success
