--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./src/server/app.js",
-    "start:dev": "nodemon --exec npm run build:dev",
-    "build": "webpack --config config/webpack/webpack.prod.js",
-    "build:dev": "webpack && node ./src/server/app.js",
-    "test": "jest --forceExit"
+    "start": "npm run server",
+    "server": "node ./src/server/app.js",
+    "server:dev": "nodemon ./src/server/app.js",
+    "build": "webpack",
+    "client": "webpack-dev-server --hot",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "axios-mock-adapter": "^1.15.0",
@@ -65,18 +67,14 @@
     ]
   },
   "nodemonConfig": {
-    "ext": "js, jsx, scss, css, json",
+    "watch": [
+      "config/",
+      "src/server/"
+    ],
     "ignore": [
-      "www/",
       "*.test.js"
     ]
   },
-  "keywords": [
-    "react",
-    "express",
-    "node",
-    "webpack"
-  ],
   "author": "Paul van Woensel",
   "contributors": [
     "Casey Van Groll",
