--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "description": "",
-  "main": "app.js",
   "scripts": {
     "start": "npm run server",
+    "preserver": "npm run build",
     "server": "node ./src/server/app.js",
     "server:dev": "nodemon ./src/server/app.js",
-    "build": "webpack",
     "client": "webpack-dev-server --hot",
+    "dev": "concurrently --kill-others \"npm run server:dev\" \"npm run client\"",
+    "build": "webpack",
     "test": "jest"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "axios-mock-adapter": "^1.15.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.1.0",
+    "concurrently": "^4.0.1",
     "css-loader": "^0.28.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
