--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "scripts": {
     "start": "npm run server",
-    "preserver": "npm run build",
     "server": "node ./src/server/app.js",
     "server:dev": "nodemon ./src/server/app.js",
     "client": "webpack-dev-server --hot",
@@ -57,8 +56,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-merge": "^4.1.4"
+    "webpack-dev-server": "^3.1.9"
   },
   "jest": {
     "collectCoverage": true,
