--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "axios-mock-adapter": "^1.15.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.1.0",
     "css-loader": "^0.28.0",
@@ -49,6 +50,7 @@
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.2.0",
+    "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "supertest": "^3.3.0",
