--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "morgan": "^1.8.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
-    "random-int": "^1.0.0",
+    "random-seed": "^0.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.4",
