--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
     "config": "^2.0.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
