--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "jest-junit": "^3.7.0",
+    "jquery": "^3.3.1",
     "morgan": "^1.8.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
+    "popper.js": "^1.14.4",
     "random-seed": "^0.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
