--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "config": "^2.0.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "react-side-nav": "^1.1.1",
+    "reactstrap": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
@@ -45,8 +50,8 @@
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
     "random-seed": "^0.3.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^4.0.0",
