--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "config": "^2.0.1",
     "express": "^4.15.2",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
+    "react-burger-menu": "^2.5.4",
     "react-side-nav": "^1.1.1",
     "reactstrap": "^6.5.0"
   },
