--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "axios-mock-adapter": "^1.15.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
+    "bootstrap": "^4.1.3",
     "chalk": "^2.1.0",
     "concurrently": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -50,6 +53,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.2.0",
