--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "morgan": "^1.8.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
+    "prop-types": "^15.6.2",
     "random-seed": "^0.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
