--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "classnames": "^2.2.6",
     "config": "^2.0.1",
     "express": "^4.15.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "react-burger-menu": "^2.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
