POC for project component using entity actions

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.17.1",
     "config": "^2.0.1",
     "express": "^4.15.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "react-textarea-autosize": "^7.1.0-1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
