--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "faker": "^4.1.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "jest-junit": "^3.7.0",
