--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "auth0-js": "^9.8.1",
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.1.3",
