--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "config": "^2.0.1",
     "express": "^4.15.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "react-burger-menu": "^2.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -25,13 +29,10 @@
     "@babel/preset-react": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
-    "@fortawesome/react-fontawesome": "^0.1.3",
     "axios-mock-adapter": "^1.15.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
-    "bootstrap": "^4.1.3",
     "chalk": "^2.1.0",
-    "classnames": "^2.2.6",
     "concurrently": "^4.0.1",
     "css-loader": "^0.28.0",
     "enzyme": "^3.3.0",
@@ -56,7 +57,6 @@
     "popper.js": "^1.14.4",
     "random-seed": "^0.3.0",
     "react": "^16.6.0",
-    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
