--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,11 @@
         "standard",
         "plugin:react/recommended"
     ],
+    "settings": {
+        "react": {
+            "version": "16.6.0"
+        }
+    },
     "rules": {
         "camelcase": 0,
         "no-console": "off",
