--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "style-loader": "^0.21.0",
     "supertest": "^3.3.0",
     "url-loader": "^1.0.1",
+    "uuid": "^3.3.2",
     "webpack": "^4.8.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
