--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "config": "^2.0.1",
+    "eslint-config-standard": "^12.0.0",
     "express": "^4.15.2",
     "lodash": "^4.17.11",
     "react-burger-menu": "^2.5.4"
