--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
     "parserOptions": {
+        "ecmaFeatures": {
+            "experimentalObjectRestSpread": true,
+            "jsx": true
+        },
         "ecmaVersion": 2017,
         "sourceType": "module"
     },
@@ -14,7 +18,9 @@
         "mocha": true,
         "jest": true
     },
-    "plugins": [ "react" ],
+    "plugins": [
+        "react"
+    ],
     "extends": [
         "standard",
         "plugin:react/recommended"
@@ -28,15 +34,39 @@
         "camelcase": 0,
         "no-console": "off",
         "no-return-assign": "off",
-        "semi": ["error", "always"],
-        "semi-spacing": ["warn", { "before": false, "after": false }],
-        "indent": ["warn", 4, { "SwitchCase": 1 }],
+        "semi": [
+            "error",
+            "always"
+        ],
+        "semi-spacing": [
+            "warn",
+            {
+                "before": false,
+                "after": false
+            }
+        ],
+        "indent": [
+            "warn",
+            4,
+            {
+                "SwitchCase": 1
+            }
+        ],
         "handle-callback-err": "warn",
         "react/prop-types": "off",
         "react/no-find-dom-node": "off",
         "react/no-string-refs": "off",
         "react/display-name": "off",
-        "space-before-function-paren": ["error", {"anonymous":"always", "named": "never"}],
-        "comma-dangle": ["error", "only-multiline"]
+        "space-before-function-paren": [
+            "error",
+            {
+                "anonymous": "always",
+                "named": "never"
+            }
+        ],
+        "comma-dangle": [
+            "error",
+            "only-multiline"
+        ]
     }
 }
