--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config": "^2.0.1",
     "eslint-config-standard": "^12.0.0",
     "express": "^4.15.2",
+    "lint": "^1.1.2",
     "lodash": "^4.17.11",
     "react-burger-menu": "^2.5.4"
   },
@@ -34,6 +35,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "axios-mock-adapter": "^1.15.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "chalk": "^2.1.0",
     "concurrently": "^4.0.1",
