--- a/.eslintrc
+++ b/.eslintrc
@@ -46,7 +46,7 @@
             }
         ],
         "indent": [
-            "warn",
+            "error",
             4,
             {
                 "SwitchCase": 1
