--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-textarea-autosize": "^7.1.0-1",
+    "react-timelines": "^2.5.2",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
