--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "config": "^2.0.1",
     "event-stream": "^3.3.4",
     "express": "^4.15.2",
-    "lodash": "^4.17.11",
-    "react-notifications": "^1.4.3"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
