--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-debug": "0.0.4",
     "body-parser": "^1.17.1",
     "config": "^2.0.1",
     "event-stream": "^3.3.4",
