--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "npm run server",
     "server": "node ./src/server/app.js",
+    "preserver:dev": "npm run build",
     "server:dev": "nodemon ./src/server/app.js",
     "client": "webpack-dev-server --hot",
     "dev": "concurrently --kill-others \"npm run server:dev\" \"npm run client\"",
@@ -90,6 +91,7 @@
   "nodemonConfig": {
     "watch": [
       "config/",
+      "src/client",
       "src/server/"
     ],
     "ignore": [
