--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^22.4.3",
     "jest-junit": "^3.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "morgan": "^1.8.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
@@ -74,6 +75,7 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "supertest": "^3.3.0",
+    "title-case": "^2.1.1",
     "url-loader": "^1.0.1",
     "uuid": "^3.3.2",
     "webpack": "^4.8.1",
